CHANGE pages in preparation for the new item ui

--- a/docs/de-de/modules/artikel/pages/eigenschaften.adoc
+++ b/docs/de-de/modules/artikel/pages/eigenschaften.adoc
@@ -349,6 +349,8 @@ Zulässig sind 8 Vor- und 4 Nachkommastellen.
 
 ! *string*
 !Gib eine alphanumerische Zeichenkette ein.
+
+Zulässig sind bis zu 255 Zeichen.
 !======
 
 | *Aktionen*
