--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -732,7 +732,6 @@ Es ist nicht möglich, einen Verkaufspreis als Variable zu verwenden, wenn diese
 
 Füge Eigenschaften vom Typ "Ganze Zahl" oder "Kommazahl" zu deiner Formel hinzu.
 Diese Liste enthält nur Eigenschaften, die du xref:artikel:eigenschaften.adoc#500[bereits im System angelegt] hast.
-//Diese Liste enthält nur Eigenschaften, die du xref:artikel:eigenschaften.adoc#500[bereits im System angelegt] hast und die ein Häkchen neben der Option xref:artikel:eigenschaften.adoc#intable-preiskalk[Preiskalkulationseigenschaft] haben.
 
 *_Hast du auch einen Wert für die Eigenschaft gespeichert?_* +
 Stelle sicher, dass du die Eigenschaft mit den entsprechenden Varianten xref:artikel:eigenschaften.adoc#1400[verknüpft] hast und dass du eine ganze Zahl oder eine Dezimalzahl als Wert gespeichert hast.
@@ -1060,6 +1059,8 @@ Es gibt verschiedene Möglichkeiten, eine Preiskalkulation auf Produkte anzuwend
 
 * Wenn du die Preiskalkulation nur auf wenige Produkte anwenden willst, dann empfiehlt es sich, dies manuell zu tun.
 * Wenn du die Preiskalkulation auf viele Produkte anwenden willst, dann empfiehlt es sich, dies mit Hilfe des Imports oder der Gruppenfunktion/Stapelverarbeitung zu tun.
+//* Wenn du die Preiskalkulation auf viele Produkte anwenden willst, dann empfiehlt es sich, dies mit Hilfe des Imports oder der Gruppenfunktion zu tun.
+//ToDo - wenn die neue Artikel UI Standard ist, dann den letzten Bullet-Point austauschen
 
 [.collapseBox]
 .*Manuell*
@@ -1108,6 +1109,30 @@ include::page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 . Klicke auf terra:execute[role="darkGrey"] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
 
 --
+
+////
+
+//ToDo - sobald die neue Artikel-UI Standard ist, dann der CollapseBox oben löschen und mit diesem CollapseBox ersetzen
+
+[.collapseBox]
+.*Gruppenfunktion*
+--
+
+Die Preiskalkulation kann per Varianten-Gruppenfunktion verknüpft werden.
+
+. Öffne das Menü *Artikel » Artikel-UI*.
+. xref:artikel:artikelsuche.adoc#100[Setze Suchfilter bei Bedarf und starte die Suche].
+. Wähle (icon:check-square[role="blue"]) die zu bearbeitenden Varianten aus.
+. Klicke in der Symbolleiste auf material:layers[role="darkGrey"] *»* material:layers[role="darkGrey"] *Varianten-Gruppenfunktion*. +
+→ Das Fenster *Varianten-Gruppenfunktion* wird geöffnet.
+. Wähle (icon:check-square[role="blue"]) die Aktion *Preiskalkulation* aus der Dropdown-Liste aus. +
+→ Die Aktion wird zum unteren Teil des Fensters hinzugefügt.
+. Wähle deine Preiskalkulation aus der Dropdown-Liste im unteren Teil des Fensters aus.
+. Führe die Gruppenfunktion aus.
+
+--
+
+////
 
 [IMPORTANT]
 .Nur eine Preiskalkulation pro Variante
