--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -879,6 +879,8 @@ Weitere Informationen findest du in der folgenden Tabelle.
 | *Zeichenkette*
 |Gib eine alphanumerische Zeichenkette ein.
 
+*_Hinweis_*: Zulässig sind bis zu 255 Zeichen.
+
 | *HTML*
 |Gib bis zu 65.535 Zeichen Text ein.
 Formatiere den Text wie gewünscht.
