UPDATE order create

--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -177,7 +177,7 @@ Die im Folgenden beschriebenen Schritte sind für Aufträge und Angebote gleich.
 Die Ansichten der Benutzeroberfläche sind so gestaltet, dass sich Aufträge schnell und übersichtlich anlegen lassen. Dies ist vor allem bei der telefonischen Aufnahme von Bestellungen von Vorteil. Zunächst werden die Auftragsdetails wie z.B. Adressen oder die Zahlungsart abgefragt. Danach werden dem Auftrag Artikel hinzugefügt, um ihn im letzten Schritt zu überprüfen und anzulegen.
 
 [#step-one-basics]
-==== Schritt 1: Allgemein
+==== Schritt 1: Auftragsdetails / Angebotsdetails
 
 Wenn der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<#carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<#table-order-details-new-order, diese Tabelle>>.
 
@@ -188,7 +188,7 @@ Wenn der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt
 |Einstellung |Erläuterung
 
 | *Auftragstyp*
-|Wähle den Typ des Auftrags aus der Dropdown-Liste.
+|Wähle aus der Dropdown-Liste, ob du einen *Auftrag* oder ein *Angebot* erstellen möchtest.
 
 | *Auftragsvorlage*
 |Wähle die Vorlage des Auftrags aus der Dropdown-Liste.
@@ -319,7 +319,7 @@ Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weite
 [#step-two-add-items]
 ==== Schritt 2: Artikel hinzufügen
 
-Sobald du alle Auftragsdetails in Schritt 1 eingetragen hast, kannst du nun in einem weiteren Schritt deine gewünschten Artikel zum Auftrag hinzufügen. In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Zusammenfassung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
+Sobald du alle Auftragsdetails in Schritt 1 eingetragen hast, kannst du nun in einem weiteren Schritt deine gewünschten Artikel zum Auftrag hinzufügen. In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt sind die Auftrags- bzw. Angebotsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
 
 [.collapseBox]
 .*Artikeltabelle individualisieren*
@@ -520,7 +520,7 @@ Artikel hinzufügen:
 *_Tipp:_* Links oben in der Tabelle kannst du mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]) alle Preis- und Mengenänderungen auf einmal aktualisieren.
 . Klicke am Ende der jeweiligen Zeile auf *Zum Warenkorb hinzufügen* (material:add_shopping_cart[]), um den Artikel zum Warenkorb hinzuzufügen.
 . Wiederhole diese Schritte, um weitere Artikel hinzuzufügen.
-. Wenn alle Artikel hinzugefügt wurden, gehe zum nächsten Schritt, indem du auf *ZUSAMMENFASSUNG* klickst. +
+. Wenn alle Artikel hinzugefügt wurden, gehe zum nächsten Schritt, indem du auf *Auftrag erstellen* bzw. *Angebot erstellen* klickst. +
 → Der Warenkorb wird gespeichert und du wirst zum letzten Schritt weitergeleitet.
 
 [#shopping-cart]
@@ -538,7 +538,7 @@ Folgendes gilt für Verkaufspreise:
 
 Auftragspositionen im Warenkorb können auch gelöscht werden. Klicke dafür auf *Löschen* (material:delete[]). Eine weitere Bearbeitungsmöglichkeit der Auftragspositionen im Warenkorb stellen die Eigenschaften dar. Beachte dafür das Kapitel <<#edit-order-item-properties, Eigenschaften von Auftragspositionen bearbeiten>>.
 
-Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *ZUSAMMENFASSUNG*, um zum dritten und letzten Schritt zu gelangen. Du kannst auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor- oder zurückgehst.
+Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *Auftrag erstellen* bzw. *Angebot erstellen*, um zum dritten und letzten Schritt zu gelangen. Du kannst auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor- oder zurückgehst.
 
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
@@ -694,12 +694,12 @@ Wenn du die Eigenschaften auf Dokumenten ausgeben lassen möchtest, musst du die
 
 Wo die Eigenschaften auf dem Dokument ausgegeben werden, hängt von der jeweiligen Eigenschaft und deren Konfiguration ab. Eigenschaften, die in der Konfiguration im Bereich *Optionen* keinen Steuersatz zugewiesen bekommen haben oder für die aus der Dropdown-Liste *Bestelleigenschaft* die Option *zusätzliche Kosten anzeigen* ausgewählt ist, werden unterhalb der Summen angezeigt. Andere Eigenschaften werden in der Tabelle der Artikelpositionen angezeigt.
 
-Wenn du mit der Bearbeitung der Auftragseigenschaften und des Warenkorbs fertig bist, folgt der Schritt *Zusammenfassung* in der Auftragsanlage. In diesem Schritt werden die Eigenschaften für Auftragspositionen nicht noch einmal angezeigt. Stelle daher sicher, dass du alle Anpassungen vorgenommen hast. Klicke unten auf *Zusammenfassung*, um zum letzten Schritt zu gelangen. Alternativ kannst du auch oben auf den Schritt “Zusammenfassung” klicken.
+Wenn du mit der Bearbeitung der Auftragseigenschaften und des Warenkorbs fertig bist, folgt der letzte Schritt in der Auftragsanlage. In diesem Schritt werden die Eigenschaften für Auftragspositionen nicht noch einmal angezeigt. Stelle daher sicher, dass du alle Anpassungen vorgenommen hast. Klicke auf *Auftrag ertellen* bzw. *Angebot erstellen*.
 
 [#step-three-summary]
-==== Schritt 3: Zusammenfassung
+==== Schritt 3: Auftrag erstellen / Angebot erstellen
 
-Im letzten Schritt wird der Auftrag abgeschlossen. Oberhalb der Auftragsdetails werden dir Infoboxen mit verschiedenen Beträgen für diesen Auftrag angezeigt:
+Im letzten Schritt wird der Auftrag oder das Angebot abgeschlossen. Oberhalb der Auftragsdetails werden dir Infoboxen mit verschiedenen Beträgen für diesen Auftrag oder für dieses Angebot angezeigt:
 
 * Gesamtbetrag (brutto): Zeigt den errechneten Gesamtbruttobetrag des Auftrags an. Der Statusbalken ist grün, wenn es sich bei dem Auftrag um einen Bruttoauftrag handelt. Ansonsten ist der Statusbalken grau.
 * Gesamtbetrag (netto): Zeigt den errechneten Gesamtnettobetrag des Auftrags an. Der Statusbalken ist grün, wenn es sich bei dem Auftrag um einen Nettoauftrag handelt. Ansonsten ist der Statusbalken grau.
