--- a/docs/en-gb/modules/data/partials/order-referrers.adoc
+++ b/docs/en-gb/modules/data/partials/order-referrers.adoc
@@ -3,7 +3,7 @@ Order referrers indicate the sales channel on which an order was generated. <<ta
 [.collapseBox]
 .What is an order referrer?
 --
-An order referrer tags an order with the sales channel on which the order was generated. Sales channels can be e.g. your online shop or markets on which you sell your items. Each sales channel has an individual order referrer. Some order referrers are available by default in your plentymarkets system. Further order referrers are added e.g. if you install a new plugin. For further information about the order referrer, see the page xref:orders:order-referrer.adoc#20[Order referrer] of the plentymarkets manual.
+An order referrer tags an order with the sales channel on which the order was generated. Sales channels can be e.g. your online shop or markets on which you sell your items. Each sales channel has an individual order referrer. Some order referrers are available by default in your plentymarkets system. Further order referrers are added e.g. if you install a new plugin. For further information about the order referrer, see the page xref:orders:order-referrer.adoc#[Order referrer] of the plentymarkets manual.
 --
 
 [[table-internalDs-order-referrers]]
