ADD order create EN

--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -390,7 +390,7 @@ Diese Spalte ist eine Standardspalte.
 
 |[#intable-item-search-price-selection]*Preisauswahl*
 |In einer Dropdown-Liste werden dir alle für diesen Auftrag ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, der dann als Grundlage für die weiteren Auftragsberechnungen verwendet wird. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
-Eine manuelle Anpassung des Preises kannst du im xref:auftraege:auftraege-verwalten.adoc#284[Warenkorb] vornehmen. Wählst du einen anderen Verkaufspreis als den ersten ermittelten, muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. Dies gilt auch für Mengenänderungen. +
+Eine manuelle Anpassung des Preises kannst du im <<#shopping-cart, Warenkorb>> vornehmen. Wählst du einen anderen Verkaufspreis als den ersten ermittelten, muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. Dies gilt auch für Mengenänderungen. +
 Konnte kein gültiger Verkaufspreis ermittelt werden, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Ohne gültigen Verkaufspreis kann der Auftrag nicht abgeschlossen werden. Lege daher den Artikel in den Warenkorb und passe den Preis dort manuell an. +
 Diese Spalte ist eine Standardspalte.
 
@@ -415,7 +415,7 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 |*Menge*
-|Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
+|Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf 0 oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
 Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
 Diese Spalte ist eine Standardspalte.
 
@@ -515,8 +515,8 @@ Artikel hinzufügen:
 
 . Suche (material:search[]) den gewünschten Artikel.
 . Wähle den passenden Verkaufspreis aus der *Preisauswahl* Dropdown-Liste.
-. Gib die Menge des Artikels ein, die dem Auftrag hinzugefügt werden soll. +
-→ Nimmst du Preis- oder Mengenänderungen vor, gehe rechts in der jeweiligen Zeile in das Kontextmenü (material:more_vert[]) und aktualisiere den Verkaufspreis mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]). +
+. Gib die Menge des Artikels ein, die dem Auftrag hinzugefügt werden soll.
+. Nimmst du Preis- oder Mengenänderungen vor, gehe rechts in der jeweiligen Zeile in das Kontextmenü (material:more_vert[]) und aktualisiere den Verkaufspreis mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]). +
 *_Tipp:_* Links oben in der Tabelle kannst du mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]) alle Preis- und Mengenänderungen auf einmal aktualisieren.
 . Klicke am Ende der jeweiligen Zeile auf *Zum Warenkorb hinzufügen* (material:add_shopping_cart[]), um den Artikel zum Warenkorb hinzuzufügen.
 . Wiederhole diese Schritte, um weitere Artikel hinzuzufügen.
@@ -526,7 +526,7 @@ Artikel hinzufügen:
 [#shopping-cart]
 ==== Warenkorb bearbeiten
 
-In der Tabelle des Warenkorbs kannst du sowohl den *Artikelnamen* als auch die *Menge* und den *Verkaufspreis* anpassen. Sobald du die Angaben der Menge oder des Preises änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorb. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
+In der Tabelle des Warenkorbs kannst du sowohl den *Artikelnamen* als auch die *Menge* und den *Verkaufspreis* anpassen. Sobald du die Angaben der Menge oder des Preises änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du rechts im Kontextmenü (material:more_vert[]) am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* oben links in der Tabelle des Warenkorbs. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
 
 Folgendes gilt für Verkaufspreise:
 
