ADD payment conditions

--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -235,6 +235,22 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 | *Auftragsherkunft*
 |Wähle die Herkunft für den Auftrag aus der Dropdown-Liste. Vorausgewählt ist entweder die Herkunft aus den Kontaktdaten oder als nächste Option eine <<#intable-standard-herkunft, Standard-Herkunft>>, wenn du diese festgelegt hast. Darüber hinaus werden nur die xref:auftraege:auftragsherkunft.adoc#[Herkünfte] angezeigt, die aktiv geschaltet sind.
 
+| *Skonto (%)*
+|Gib das Skonto, d.h. den Wert in Prozent, der bei Einhaltung der Skontofrist (Tage) abgezogen wird, ein. +
+Diese Einstellung ist nur für die Zahlungsarten *Rechnung* und *Vorkasse* verfügbar.
+
+| *Skontofrist (Tage)*
+|Gib die Skontofrist, d.h. die Anzahl der Tage ab Rechnungserstellung, in denen skontiert offene Forderungen bezahlt werden können, ein. +
+Diese Einstellung ist nur für die Zahlungsarten *Rechnung* und *Vorkasse* verfügbar.
+
+| *Valuta (Tage)*
+|Gib das Valutadatum, d.h. den Zeitraum ab Rechnungserstellung, bevor der Zeitraum des Zahlungsziels beginnt, ein. +
+Diese Einstellung ist nur für die Zahlungsarten *Rechnung* und *Vorkasse* verfügbar.
+
+| *Zahlungsziel (Tage)*
+|Gib das Zahlungsziel, d.h. die Frist für die Zahlung in Tagen, ein. +
+Diese Einstellung ist nur für die Zahlungsarten *Rechnung* und *Vorkasse* verfügbar.
+
 |====
 
 [.collapseBox]
