Added descriptions for plentyChannel best practices

--- a/docs/de-de/modules/maerkte/pages/best-practices-amazon-vcs.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-amazon-vcs.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: Amazon VCS, VCS, VCS Lite, VCS plentymarkets, Umsatzsteuerservice, VCS Amazon
 :id: CLPVTBO
+:description: Dieses Best Practice enthält Informationen und Voraussetzungen für den Amazon-Rechnungsservice VCS, mit dem Amazon-Rechnungen in plentymarkets oder auf Amazon erstellt werden können.
 
 Dieses Best Practice soll euch dabei unterstützen, den Amazon-Rechnungsservice VCS in eurem plentymarkets System einzurichten.
 
