--- a/docs/en-gb/modules/markets/pages/best-practice-limango-partial-delivery.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practice-limango-partial-delivery.adoc
@@ -1,7 +1,7 @@
 = Best practice: Reporting partial deliveries to limango
 :author: team-plenty-channel
 :keywords: limango, shipping items, partial delivery, part delivery, shipping limango orders, limango partial delivery
-:description:
+:description: In this best practice you will learn how to ship one or more order items of a limango order without marking the whole order as shipped.
 
 A customer ordered several items at limango, but you do not have all of the order items in stock. However, now you already want to send two items which you have in stock to your customer. This best practice teaches you how to do this and how to inform limango that one or more order items have already been shipped.
 
