--- a/docs/en-gb/modules/markets/pages/best-practice-mytoys-partial-cancellation.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practice-mytoys-partial-cancellation.adoc
@@ -1,7 +1,7 @@
 = Best practice: Reporting partial cancellations to MyToys
 :author: team-plenty-channel
 :keywords: MyToys, partial cancellation, cancellation, MyToys cancellation, cancelation, cancel orders
-:description:
+:description: In this best practice you will learn how to cancel one or more order items of a MyToys order without marking the whole order as cancelled.
 
 One or more order items of an order, but not the whole order, should be cancelled? This best practice teaches you how to inform MyToys that one or more order items should be cancelled.
 
