--- a/docs/de-de/modules/maerkte/pages/best-practice-limango-teillieferung.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practice-limango-teillieferung.adoc
@@ -1,7 +1,7 @@
 = Praxisbeispiel: Teillieferungen an limango melden
 :author: team-plenty-channel
 :keywords: limango, Artikel verschicken, Teillieferung, einen Artikel an limango schicken, limango Teillieferung, Teil Lieferung
-:description:
+:description: In diesem Praxisbeispiel erfährst du, wie du eine oder mehrere Auftragspositionen eines limango-Auftrags versenden kannst, ohne den gesamten Auftrag als versendet zu markieren.
 
 Eine Kundin hat etwas bei limango bestellt, du hast jedoch nicht alle Artikel des Auftrags auf Lager. Nun möchtest du zwei Artikel, die auf Lager sind, bereits an deine Kundin verschicken. In diesem Praxisbeispiel erfährst du, wie das geht und wie du limango darüber informieren kannst, dass eine oder mehrere Positionen eines Auftrags bereits verschickt wurden.
 
