--- a/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
@@ -1,7 +1,7 @@
 = Praxisbeispiel: Teilstornierungen an MyToys senden
 :author: team-plenty-channel
 :keywords: MyToys, Teilstornierung, Stornierung, MyToys Stornierung, Stonierung, Teil Stornierung, stornieren, MyToys Stornierung
-:description:
+:description: In diesem Praxisbeispiel erfährst du, wie du eine oder mehrere Auftragspositionen eines MyToys-Auftrags stornieren kannst, ohne den gesamten Auftrag zu stornieren.
 
 Eine oder mehrere Positionen eines Auftrags sollen storniert werden, ohne den gesamten Auftrag zu stornieren? In diesem Praxisbeispiel erfährst du, wie du MyToys darüber informieren kannst, dass eine oder mehrere Positionen eines Auftrags storniert werden.
 
