--- a/docs/de-de/modules/maerkte/pages/best-practices-amazon-fehler-request-throttled.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-amazon-fehler-request-throttled.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: Request is throttled, Amazon, Prime, Throttling
 :id: ASBZ4BY
+:description: In diesem Best Practice erfährst du, was die Amazon-Fehlermeldung "Request is throttled" bedeutet und wie du den Fehler beheben kannst.
 
 Dieses Best Practice behandelt das auftretende Problem der Fehlermeldung: “Request is throttled” und dessen Lösung.
 
