--- a/docs/de-de/modules/maerkte/pages/best-practices-amazon-prime.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-amazon-prime.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: Prime, NextDay, SecondDay, Prime NextDay, Prime SecondDay, Prime-Auftrag, Prime Auftrag, Prime Fehler, Amazon Prime, Prime, Prime Aufträge, Amazon Prime Aufträge
 :id: HVTSBI0
+:description: In diesem Best Practice erfährst du, wie ein Amazon Prime-Auftrag abläuft und welche Einstellungen du bei Prime-Aufträgen beachten musst.
 
 [IMPORTANT]
 .Grundsätzliches
