--- a/docs/en-gb/modules/markets/pages/best-practices-amazon-vcs.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-amazon-vcs.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: VCS, VAT calculation service, VCS plentymarkets, VCS Amazon, Amazon invoice, Amazon invoice creation
 :id: CLPVTBO
+:description: This best practice contains information and requirements for Amazon's VAT calculation service VCS. With Amazon VCS, Amazon invoices can be created in plentymarkets or by Amazon.
 
 This best practice informs you about Amazon’s VAT calculation service VCS and explains what to consider when setting VCS up in plentymarkets.
 
