--- a/docs/en-gb/modules/markets/pages/best-practices-idealo-free-text-field.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-idealo-free-text-field.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: idealo item export, idealo free text field, idealo property
 :id: A6CU20R
+:description: This best practice teaches you how to use the column free_text_field in the idealo item export.
 
 == Item export: Filling the column _free_text_field_
 
