--- a/docs/de-de/modules/artikel/pages/einheiten.adoc
+++ b/docs/de-de/modules/artikel/pages/einheiten.adoc
@@ -7,7 +7,7 @@
 //ToDo - GIFs in German and English, also for the Tags page too
 
 ////
-zuletzt bearbeitet 07.06.2022
+zuletzt bearbeitet 01.11.2022
 ////
 
 Einheiten wie Kilogramm, Liter und Zentimeter helfen dir, die Größe oder Maße deiner Produkte zu definieren.
@@ -269,6 +269,15 @@ Wenn du den Inhalt für nur wenige Varianten angeben möchtest, dann empfiehlt e
 . Wähle eine Einheit aus der rechten Dropdown-Liste aus.
 . *Speichere* (terra:save[role="green"]) die Einstellungen.
 
+//ToDo - wenn die neue Artikel-UI Standard ist, dann die Konfig oben löschen und durch die Konfig unten ersetzen
+
+////
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Inhalt / Dimensionen*.
+. Gib eine Zahl in das Feld *Anzahl* ein.
+. Wähle eine Einheit aus der Dropdown-Liste *Einheit* aus.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+////
+
 --
 
 [.collapseBox]
@@ -302,6 +311,17 @@ Beispiel: Eine Seife, die in 100ml, 250ml und 500ml erhältlich ist.
 . Klicke auf terra:execute[role="darkGrey"] *Varianten erstellen*.
 . Wiederhole den Vorgang für 250ml und für 500ml.
 
+//ToDo - wenn die neue Artikel-UI Standard ist, dann die Konfig oben löschen und durch die Konfig unten ersetzen
+
+////
+. Öffne das Menü *Artikel » Artikel-UI » [Artikel öffnen] » Variantenübersicht*.
+. Klicke auf *Varianten erstellen* (icon:plus[role="darkGrey"]). +
+→ Ein Pop-Up Fenster wird geöffnet.
+. Gib in den Feldern *Inhalt* und *Einheit* die Menge und Einheit der ersten Variante ein, z.B. 100ml.
+. Klicke auf *Varianten erstellen*.
+. Wiederhole den Vorgang für 250ml und für 500ml.
+////
+
 [#300]
 == Grundpreis auf Vertriebskanälen und Etiketten anzeigen
 
@@ -330,6 +350,17 @@ Der Grundpreis kann im eigenen plentyShop, auf Vertriebskanälen wie Amazon und 
 * Stelle sicher, dass ein Preis eingegeben wurde.
 . Öffne das Menü *CMS » ShopBuilder » [Inhalt öffnen]*
 * Stelle sicher, dass das Widget *Artikel / Artikelpreis* im Layout enthalten ist.
+
+//ToDo - wenn die neue Artikel-UI Standard ist, dann die Konfig oben löschen und durch die Konfig unten ersetzen
+
+////
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Inhalt / Dimensionen*.
+* Stelle sicher, dass ein numerischer Wert in das Feld *Anzahl* eingegeben und eine Option aus der Dropdown-Liste *Einheit* gewählt wurde.
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
+* Stelle sicher, dass ein Preis eingegeben wurde.
+. Öffne das Menü *CMS » ShopBuilder » [Inhalt öffnen]*
+* Stelle sicher, dass das Widget *Artikel / Artikelpreis* im Layout enthalten ist.
+////
 
 [TIP]
 Gemäß § 5 der link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] muss die Mengeneinheit für den Grundpreis 1 Kilogramm oder 1 Liter sein.
