add new default messenger template

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1332,7 +1332,7 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 
 * <<#variablen-ticket, Ticket>>
 
-* <<#variablen-messenger, Messenger>>
+// * <<#variablen-messenger, Messenger>>
 
 [#variablen-auftrag]
 ==== Variablen: Auftrag allgemein
@@ -2793,6 +2793,7 @@ Beachte dazu das Kapitel xref:crm:ticketsystem-nutzen.adoc#5500[Tickets im Mein 
 
 |====
 
+//// 
 [#variablen-messenger]
 ==== Variablen: Messenger
 
@@ -2831,6 +2832,7 @@ Beachte dazu das Kapitel xref:crm:ticketsystem-nutzen.adoc#5500[Tickets im Mein 
 | `messenger.uuid`
 
 |====
+////
 
 [#code-beispiele-code-widget]
 == Code-Beispiele für das Code-Widget
