--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -144,31 +144,29 @@ ggf. Tabelle mit weiteren Beispielen außer mailbox.org: Googlemail, Office365, 
 Außerdem wählst du in diesem Schritt eine E-Mail-Vorlage für den E-Mail-Versand.
 
 [TIP]
-.Nutze die Standardvorlage *Messenger default*
+.Standardvorlage *Messenger default NEW* verwenden
 ====
-Wir empfehlen, die Standardvorlage *Messenger default* für den Messenger zu verwenden. Diese Vorlage ist bereits in deinem System im Menü *CRM » EmailBuilder (Testphase)* im Ordner *Standardvorlagen* vorhanden. Du kannst diese Vorlage nach deinen Wünschen anpassen.
+Wir empfehlen, die Standardvorlage *Messenger default NEW* für den Messenger zu verwenden. Diese Vorlage ist bereits in deinem System im Menü *CRM » EmailBuilder (Testphase)* im Ordner *Standardvorlagen* vorhanden. Du kannst diese Vorlage nach deinen Wünschen anpassen. Diese Vorlage wird automatisch vorausgewählt, wenn du eine neue Nachricht schreibst. 
 
 Die Vorlage enthält die folgenden Variablen:
 
-* Betreff der Nachricht in der Betreffzeile, dargestellt als `{{ messenger.title }}`
+* Name des Mandanten in der Betreffzeile, dargestellt als `{{ globals.clientName }}`
 ** Im Betreff der Vorlage muss eine sogenannte _twig expression_ in doppelt geschweiften Klammern enthalten sein, weil in der Betreffzeile keine "normalen" Variablen verwendet werden können. Weitere Informationen dazu findest du auf der Handbuchseite xref:crm:emailbuilder.adoc#[EmailBuilder] im Kapitel xref:crm:emailbuilder.adoc#variablen-emailbuilder[Verfügbare Variablen und twig expressions].
 * Vollständiger Name
-* Inhalt der Nachricht
+// * Inhalt der Nachricht
 * Signatur im HTML-Format
-* ID der Konversation
-** Die Variable *ID der Konversation* dient als eindeutiges Kennzeichen, damit die Nachricht immer korrekt zugeordnet werden kann. Daher sollte diese Variable _nicht_ aus der Vorlage entfernt werden.
+// * ID der Konversation
+// ** Die Variable *ID der Konversation* dient als eindeutiges Kennzeichen, damit die Nachricht immer korrekt zugeordnet werden kann. Daher sollte diese Variable _nicht_ aus der Vorlage entfernt werden.
 ====
 
-// TODO: was passiert nun mit den Variablen im EmailBuilder? Was enthält nun die default template "Messenger default"?
+Du kannst in diesem Schritt selbstverständlich auch eine Vorlage wählen, die du selbst im Menü *CRM » EmailBuilder* erstellt hast.
 
-Wenn du in diesem Schritt _nicht_ die Standardvorlage für den Messenger, sondern eine eigene E-Mail-Vorlage verwenden möchtest, stelle sicher, dass die E-Mail-Vorlage, die du im Menü *CRM » EmailBuilder (Testphase)* erstellst, mindestens die folgenden Variablen enthält:
-
-* Betreff der Nachricht 
-** Gib im Betreff der Vorlage `{{ messenger.title }}` ein.
-* Inhalt der Nachricht 
-** Füge im Textfeld der Vorlage die Variable `Inhalt der Nachricht` ein.
-* ID der Konversation
-** Füge im Textfeld der Vorlage die Variable `ID der Konversation` ein.
+// * Betreff der Nachricht 
+// ** Gib im Betreff der Vorlage `{{ messenger.title }}` ein.
+// * Inhalt der Nachricht 
+// ** Füge im Textfeld der Vorlage die Variable `Inhalt der Nachricht` ein.
+// * ID der Konversation
+// ** Füge im Textfeld der Vorlage die Variable `ID der Konversation` ein.
 
 //// 
 Im EmailBuilder stehen dir die folgenden Messenger-bezogenen Variablen zur Verfügung:
