--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -41,113 +41,20 @@ include::partial$lts-assistant.adoc[]
 
 include::partial$lts-legal.adoc[]
 
-[#10]
+[#lts-intro]
 == plentyShop LTS-Plugin einrichten
 
-Nachdem du die <<#preparation, Vorbereitungen>> für deinen plentyShop getroffen hast, kannst du nun mit der Einrichtung des Plugins *plentyShop LTS* beginnen.
-Die folgenden Kapitel führen dich durch die Einrichtung der einzelnen Tabs der <<#20, plentyShop LTS Konfiguration>>. 
-Du erreichst die plentyShop LTS Konfiguration über die *Plugin-Übersicht* durch Klick auf das Plugin *plentyShop LTS*. +
-Für die Einrichtung sind keinerlei Programmierkenntnisse erforderlich.
+include::partial$lts-intro.adoc[]
 
-[IMPORTANT]
-.Veraltete Einstellungen einblenden
-====
-Einige der in plentyShop LTS vorgenommenen Einstellungen werden nach und nach in den ShopBuilder verlagert. Für Nutzer:innen, die diese Einstellungen nicht über den ShopBuilder vornehmen möchten, haben wir die Option *Veraltete Einträge einblenden/verstecken* in der Werkzeugleiste der plentyShop LTS Konfiguration eingebaut. Über diesen Schalter kannst du auf die entfernten Einstellungen zugreifen.
-====
-
-[[bild-konfiguration]]
-.plentyShop LTS Konfiguration
-image::webshop:DE-Ceres-einrichten-Konfiguration.png[]
-
-[#20]
+[#lts-global]
 === Globale Einstellungen vornehmen
 
-Im Tab *Global* nimmst du Einstellungen vor, die sich auf den gesamten plentyShop auswirken. +
-Hier richtest du außerdem die Kontaktseite für deinen plentyShop und das Kontaktformular für Kund:innenanfragen ein.
+include::partial$lts-global.adoc[]
 
-[#45.instruction]
-Globale Einstellungen vornehmen:
-
-. Öffne das Menü *Plugins » Plugin-Übersicht*. +
-→ Die Plugin-Übersicht wird geöffnet.
-. Klicke auf *plentyShop LTS*. +
-→ Das Plugin wird geöffnet. +
-→ Das Tab *Global* ist bereits vorausgewählt.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-globale-einstellungen>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[tabelle-globale-einstellungen]]
-.Globale Einstellungen vornehmen
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Name des Webshops* (alte Einstellung)
-|Gib den Namen deines plentyShops ein. Dieser wird im Header angezeigt.
-
-| *Firmenlogo* (alte Einstellung)
-|Bilddatei des Firmenlogos auswählen. Das Firmenlogo kann auf der rechten Seite über die Schaltfläche *Datei wählen* oder im Menü *CMS » Webspace* im Ordner *Layout* hochgeladen werden. Die Höhe der Bilddatei entspricht der Höhe der Kategorienavigation im Header (in der Desktop-Ansicht sind das 42px). Die Breite des Bilds wird entlang des Seitenverhältnisses skaliert. (Diese Einstellung ist veraltet und kann nun über den ShopBuilder vorgenommen werden.)
-
-| *Favicon des Webshops*
-|Bilddatei des Favicons auswählen. Das Favicon kann über die Schaltfläche *Datei wählen* hochgeladen werden. Die Bilddatei muss eine *.ICO*-Datei sein.
-
-| *Kategorie zur Anzeige von Versandkosteninformationen* (alte Einstellung)
-|<<#30, Kategorie vom Typ Content erstellen und verknüpfen>>, um Informationen zu Versandkosten im plentyShop anzuzeigen. (Diese Einstellung ist veraltet und kann nun über den ShopBuilder vorgenommen werden.)
-
-| *B2B-Standardkundenklasse*
-|ID für die Standardkundenklasse für Geschäftskund:innen eingeben. Weitere Informationen findest du im Handbuch unter xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse erstellen].
-
-| *Callisto-URL-Struktur für Artikel aktivieren*
-|Aktivieren, um die im alten Webshop Callisto verwendete URL-Struktur in plentyShop LTS zu nutzen. Diese Einstellung hat keine Auswirkungen auf plentyShops, die nicht auf einem alten Callisto-Shop basieren. Bei einem reinen plentyShop LTS empfehlen wir, diese Option nicht zu aktivieren.
-
-| *Google reCAPTCHA Version*
-|Wähle aus, ob du die unsichtbare reCAPTCHA 2 oder reCAPTCHA 3 Version verwenden möchtest.
-
-| *Google reCAPTCHA Schlüssel*
-|Den Websiteschlüssel von Google reCAPTCHA eingeben, um ein Google reCAPTCHA für dein Kontaktformular und die Kundenregistrierung einzubinden. Den Schlüssel erhältst du, wenn du deine link:https://www.google.com/recaptcha/admin#list[Website bei Google reCAPTCHA registrierst^]. Wähle bei der Einrichtung ein reCAPTCHA vom Typ *Unsichtbares reCAPTCHA*. Dieses validiert Besucher:innen deines plentyShops unsichtbar im Hintergrund. Beachte, dass bei der Nutzung des Google reCAPTCHA ein Hinweis darauf in deiner Datenschutzerklärung erforderlich ist.
-
-| *Google reCAPTCHA Schwellenwert*
-|Gib einen Wert ein, gemäß welchem Google entscheidet, ob es sich bei Benutzer:innen um Menschen oder Bots handelt. Je höher der Wert, desto strikter fällt die Validierung aus. Der Standardwert besträgt 0,5.
-
-| *Gültigkeit der URLs zum Ändern von Passwort bzw. E-Mail-Adresse*
-|Auswählen, wie lange die URLs zur Änderung von Passwort und E-Mail-Adresse gültig sein sollen. 
-
-| *Zustimmung zur Datenschutzerklärung bei der Kundenregistrierung voraussetzen*
-|Aktivieren, um eine Checkox anzeigen zu lassen, mit der Nutzer:innen der Datenschutzerklärung zustimmen können.
-
-| *Nicht akzeptierte Cookies blockieren*
-|Aktivieren, um alle Cookies zu blockieren, für die keine eindeutige Zustimmung vorliegt. *Hinweis:* Wir empfehlen dir, diese Einstellung zu aktivieren. Falls diese Einstellung inaktiv, wird reCAPTCHA trotzdem geladen. Dadurch ist der Shop nicht rechtssicher.
-
-|====
-
-[#50]
+[#lts-homepage]
 === Startseite anpassen
 
-*plentyShop LTS* wird mit einer Standardstartseite als Platzhalter ausgeliefert. +
-Du passt die Startseite deines Shops mit dem xref:webshop:shop-builder.adoc#shopbuilder-intro[ShopBuilder] an. +
-Deaktiviere die Standardstartseite, damit diese mit der ShopBuilder-Startseite ersetzt wird.
-
-[#60.instruction]
-Standard-Startseite deaktivieren:
-
-. Öffne das Menü *Plugins » Plugin-Übersicht*. +
-→ Die Plugin-Übersicht wird geöffnet.
-. Klicke auf *plentyShop LTS*. +
-→ Das Plugin wird geöffnet.
-. Klicke im Verzeichnisbaum auf *Konfiguration*.
-. Wechsle in das Tab *Startseite*.
-. Deaktiviere die Einstellung *Standardstartseite anzeigen*.
-. Aktiviere die Einstellung *ShopBuilder Startseite anzeigen*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Die Standard-Startseite wird deaktiviert und deine ShopBuilder Startseite kann angezeigt werden.
-
-[#65]
-
-==== plentyShop LTS-Startseite mit dem ShopBuilder erstellen
-
-Mit dem ShopBuilder kannst du die Startseite deines plentyShops mit wenigen Handgriffen in deinem Terra-Backend erstellen und bearbeiten.
-
-Informationen zur Einrichtung des ShopBuilders findest du auf der ShopBuilder xref:webshop:shop-builder.adoc#shopbuilder-intro[Handbuchseite].
+include::partial$lts-homepage.adoc[]
 
 [#header]
 === Header-Einstellungen vornehmen
