CHANGE: move more LTS chapters to include files

--- a/docs/de-de/modules/webshop/partials/lts-intro.adoc
+++ b/docs/de-de/modules/webshop/partials/lts-intro.adoc
@@ -1,12 +1,15 @@
 Nachdem du die <<#preparation, Vorbereitungen>> für deinen plentyShop getroffen hast, kannst du nun mit der Einrichtung des Plugins *plentyShop LTS* beginnen.
-Die folgenden Kapitel führen dich durch die Einrichtung der einzelnen Tabs der <<#20, plentyShop LTS Konfiguration>>. 
-Du erreichst die plentyShop LTS Konfiguration über die *Plugin-Übersicht* durch Klick auf das Plugin *plentyShop LTS*. +
+Die folgenden Kapitel führen dich durch die Einrichtung der einzelnen Tabs der <<#20, plentyShop LTS Konfiguration>>. +
+
+Öffne das Menü **Plugins » Plugin-Set-Übersicht** und wähle das Plugin-Set, in dem du das Plugin *plentyShop LTS* einrichten willst. Klicke auf das Plugin *plentyShop LTS*, um die Plugin-Einstellungen zu öffnen. +
+
 Für die Einrichtung sind keinerlei Programmierkenntnisse erforderlich.
 
 [IMPORTANT]
 .Veraltete Einstellungen einblenden
 ====
-Einige der in plentyShop LTS vorgenommenen Einstellungen werden nach und nach in den ShopBuilder verlagert. Für Nutzer:innen, die diese Einstellungen nicht über den ShopBuilder vornehmen möchten, haben wir die Option *Veraltete Einträge einblenden/verstecken* in der Werkzeugleiste der plentyShop LTS Konfiguration eingebaut. Über diesen Schalter kannst du auf die entfernten Einstellungen zugreifen.
+Du kannst die plentyShop LTS Einstellungen über den plentyShop LTS-Assistenten und den ShopBuilder vornehmen.
+Falls du diese Einstellungen nicht über den ShopBuilder vornehmen willst, kannst du über den Schalter *Veraltete Einträge einblenden/verstecken* in der Werkzeugleiste der plentyShop LTS Konfiguration diese Einstellungen wieder in den Plugin-EInstellungen anzeigen lassen.
 ====
 
 [[bild-konfiguration]]
