--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -56,224 +56,20 @@ include::partial$lts-global.adoc[]
 
 include::partial$lts-homepage.adoc[]
 
-[#header]
+[#lts-header]
 === Header-Einstellungen vornehmen
 
-Hier nimmst du Einstellungen vor, die den Header deines plentyShops betreffen. 
-Der Header ist der obere Bereich einer Seite. 
-Du kannst für jede Seite einen individuellen Header mit dem ShopBuilder xref:webshop:shop-builder.adoc#shopbuilder-intro[ShopBuilder] erstellen.
+include::partial$lts-header.adoc[]
 
-[[tabelle-header-einstellungen]]
-.Header-Einstellungen vornehmen
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Position der Navigationsleise*
-| Wählen, ob die Navigationsleiste *oben*, *links* oder *oben und links* angezeigt werden soll.
-
-| *Kategorietypen, die in der Navigationsleiste angezeigt werden*
-| Aktiviere die Kategorietypen, die du in der Navigationsleiste anzeigen möchtest. Du kannst Artikel-, Content- und Blogkategorien anzeigen lassen.
-
-| *Kategorieebenen des Kategoriebaums*
-| Wähle, wie viele Ebenen du in der Kategorienavigation im Header anzeigen lassen möchtest. 
-
-|====
-
-[#90]
+[#lts-singleitem]
 === Artikelansicht anpassen
 
-Im Tab *Artikelansicht* passt du das Aussehen der Artikelansicht an. Wähle, welcher Artikelname und welche Artikelinformationen im plentyShop angezeigt werden. Wähle zudem, welche Artikelvarianten in der Kategorieansicht angezeigt werden. Wie du die hier angezeigten Inhalte in plentymarkets speicherst, erfährst du auf der Seite xref:artikel:artikel-verwalten.adoc#[Artikel verwalten].
+include::partial$lts-singleitem.adoc[]
 
-[#100.instruction]
-Artikelansicht anpassen:
-
-. Öffne das Menü *Plugins » Plugin-Übersicht*. +
-→ Die Plugin-Übersicht wird geöffnet.
-. Klicke auf *plentyShop LTS*. +
-→ Das Plugin wird geöffnet.
-. Klicke im Verzeichnisbaum auf *Konfiguration*.
-. Wechsle in das Tab *Artikelansicht*.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-artikelansicht-anpassen>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[tabelle-artikelansicht-anpassen]]
-.Artikelansicht anpassen
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Angezeigter Name des Artikels*
-|Name des Artikels wählen, der im plentyShop angezeigt wird. +
-
-*Artikelname* = Wählen, um den Artikelnamen anzuzeigen. +
-*Variantenname* = Wählen, um den Variantennamen anzuzeigen. Ist kein Variantenname vorhanden, wird der Artikelname angezeigt. +
-*Artikel- und Variantenname* = Wählen, um eine Kombination aus Artikelname und Variantenname anzuzeigen.
-
-| *Artikelname*
-| *Name 1*, *Name 2* oder *Name 3* wählen. Texte für die Felder werden im Tab xref:artikel:artikel-verwalten.adoc#50[Texte] eines Artikels gespeichert. Wenn *Name 2* oder *Name 3* gewählt wurde, aber kein Name im Textfeld gespeichert wurde, wird *Name 1* als Artikelname verwendet.
-
-| *Angezeigte Artikelinformationen* (alte Einstellung)
-|Eine, mehrere oder *ALLE* Artikelinformationen wählen, um die Informationen im Tab *Weitere Details* der Einzelansicht eines Artikels im plentyShop anzuzeigen. +
-
-*Artikelzustand* = Aktivieren, um den Artikelzustand anzuzeigen. +
-*Hersteller* = Aktivieren, um den Hersteller anzuzeigen. Für die Anzeige wird der externe Name eines Herstellers verwendet. +
-*Herstellungsland* = Aktivieren, um das Herstellungsland anzuzeigen. +
-*Altersfreigabe* = Aktivieren, um die Altersfreigabe anzuzeigen. +
-*Artikel-ID* = Aktivieren, um die Artikel-ID anzuzeigen. +
-*Externe Varianten-ID* = Aktivieren, um die externe Varianten-ID anzuzeigen. +
-*Modell* = Aktivieren, um das Modell anzuzeigen. +
-*Artikelmaße* = Aktivieren, um die Artikelmaße anzuzeigen. +
-*Zolltarifnummer* = Aktivieren, um die Zolltarifnummer anzuzeigen. +
-*Nettogewicht* = Aktivieren, um das Nettogewicht anzuzeigen. +
-*Bruttogewicht* = Aktivieren, um das Bruttogewicht anzuzeigen. +
-*Artikelinhalt* = Aktivieren, um den Artikelinhalt anzuzeigen. +
-
-Die 5 Einträge *Beschreibung*, *Technische Daten*, *Streichpreis*, *Variantenname* und *Vorschautext* werden an anderer Stelle auf der Artikelansicht angezeigt: +
-
-*Beschreibung* = Aktivieren, um das Tab *Beschreibung* anzuzeigen. Wenn du die Anzeige der *Beschreibung* aktivierst, aber keinen Text unter *Beschreibung* im Tab xref:artikel:artikel-verwalten.adoc#50[Texte] eines Artikels speichern, wird das Tab nicht angezeigt. +
-*Technische Daten* = Aktivieren, um das Tab *Technische Daten* anzuzeigen. Wenn du die Anzeige der *Technischen Daten* aktivierst, aber keinen Text unter *Technische Daten* im Tab xref:artikel:artikel-verwalten.adoc#50[Texte] eines Artikels speichern, wird das Tab nicht angezeigt. +
-*Streichpreis* = Aktivieren, um den Streichpreis neben dem Artikelpreis anzuzeigen. Um den Streichpreis anzuzeigen, muss mindestens ein UVP sowie ein weiterer Preis hinterlegt sein. +
-*Variantenname* = Aktivieren, um den Variantennamen neben dem Artikelnamen anzuzeigen. Hierfür muss für die Einstellung *Angezeigter Name des Artikels* die Option *Artikel- und Variantenname* aktiv sein. +
-*Vorschautext* = Aktivieren, um den Vorschautext unterhalb des Artikelnamens anzuzeigen. Der Vorschautext kann im Tab xref:artikel:artikel-verwalten.adoc#50[Texte] hinterlegt werden. +
-
-| *Shop-Aktionen: Anzahl der Dezimalstellen für Rabatt*
-|Anzahl der Dezimalstellen für den Rabatt wählen, der in der Artikelliste am Artikel angezeigt wird.
-
-| *Variantenauswahl für Varianten ohne Bestand in der Varianten-Dropdown-Liste aktivieren* (veraltet)
-|Aktivieren, um Varianten ohne Bestand in der Varianten-Dropdown-Liste in der Kategorieansicht anzuzeigen. Varianten ohne Bestand sind wählbar und werden nicht ausgegraut. Wenn eine Variante ohne Bestand gewählt wird, werden Kund:innen zur Einzelansicht des Artikels weitergeleitet.
-
-| *Varianten nach Typ anzeigen* (veraltet)
-|Varianten nach Typ in der Artikelliste einer Kategorie anzeigen. +
-
-*Alle* = Wählen, um aktive Hauptvarianten und Untervarianten von Artikeln anzuzeigen. Inaktive Hauptvarianten und Untervarianten werden ausgeblendet. +
-*Nur Hauptvarianten* = Wählen, um nur aktive Hauptvarianten anzuzeigen. +
-*Nur Untervarianten* = Wählen, um nur aktive Untervarianten anzuzeigen. Aktive Hauptvarianten werden ausgeblendet. Untervarianten von inaktiven Hauptvarianten werden nicht angezeigt. +
-*Dynamisch* = Wählen, um Varianten dynamisch anzuzeigen. Bei der Auflistung der Varianten werden sowohl aktive Haupt- als auch aktive Untervarianten berücksichtigt. Die Anzeige der Variante in der Artikelliste ist dabei abhängig von der gewählten Sortieroption im Frontend. 
-
-| *"Bitte wählen-Option anzeigen"*
-|Aktivieren, um die "Bitte wählen"-Option für nicht ausgewählte Attribute einer Variante anzuzeigen. Die "Bitte wählen"-Option kann über den plentyShop LTS-Assistenten vorausgewählt werden, wenn diese Option aktiv ist.
-
-| *Bilderkarussell in der Kategorieansicht anzeigen*
-|Aktivieren, um das Bilderkarussell in der Kategorieansicht anzuzeigen.
-
-| *Punkte unterhalb des Bilderkarussells in der Kategorieansicht anzeigen*
-|Aktivieren, um unterhalb des Bilderkarussells eines Artikels in der Kategorieansicht Navigationspunkte anzuzeigen.
-
-| *Navigationspfeile im Bilderkarussell in der Kategorieansicht anzeigen*
-|Aktivieren, um im Bilderkarussell eines Artikels in der Kategorieansicht Pfeile anzuzeigen, mit der durch das Bilderkarussell navigiert werden kann.
-
-| *Ladeanimation*
-|Ladeanimation für die Kategorieansicht wählen. +
-
-*Ladeanimation mit Balken* = Beim Laden der Kategorieansicht wird ein Balken als Ladeanimation angezeigt. +
-*Ladeanimation mit Spinner* = Beim Laden der Kategorieansicht wird ein Spinner als Ladeanimation angezeigt.
-
-| *Vorschaubild in der Kategorieansicht anzeigen*
-|Aktivieren, um das Vorschaubild in der Kategorieansicht anzuzeigen. Das Vorschaubild wird im Tab *Dokumente* der Kategorie hochgeladen und als Bild 1 markiert.
-
-| *Kategoriebeschreibung über Artikelliste anzeigen* (veraltet)
-|Wählen, welche Artikelbeschreibung oberhalb der Artikelliste angezeigt wird. Der jeweilige Beschreibungstext kann im Menü *Artikel » Kategorien* im Tab *Beschreibung 1* oder *Beschreibung 2* bearbeitet werden. +
-
-*Keine* = Es wird keine Kategoriebeschreibung angezeigt. +
-*Beschreibung 1* = Beschreibung 1 wird angezeigt. +
-*Beschreibung 2* = Beschreibung 2 wird angezeigt. +
-*Beschreibung 1 und 2* = Es werden sowohl Beschreibung 1 als auch Beschreibung 2 angezeigt.
-
-| *Kategoriebeschreibung unter Artikelliste anzeigen* (veraltet)
-|Wählen, welche Artikelbeschreibung unterhalb der Artikelliste angezeigt wird. Der jeweilige Beschreibungstext kann im Menü *Artikel » Kategorien* im Tab *Beschreibung 1* oder *Beschreibung 2* bearbeitet werden. +
-
-*Keine* = Es wird keine Kategoriebeschreibung angezeigt. +
-*Beschreibung 1* = Beschreibung 1 wird angezeigt. +
-*Beschreibung 2* = Beschreibung 2 wird angezeigt. +
-*Beschreibung 1 und 2* = Es werden sowohl Beschreibung 1 als auch Beschreibung 2 angezeigt.
-
-| *Beschreibung der Kategorie in der Kategorieansicht anzeigen* (veraltet)
-|Aktivieren, um die Beschreibung der Kategorie in der Kategorieansicht anzuzeigen. Die Beschreibung wird im Tab *Beschreibung 1* der Kategorie eingegeben.
-
-| *Alle Bestellmerkmale erfordern, bevor ein Artikel in den Warenkorb gelegt werden kann*
-|Aktivieren, um Artikel erst nach Auswahl aller möglichen Bestellmerkmale in den Warenkorb legen zu können.
-
-| *Kategorien als Filteroptionen bei Suchergebnissen anzeigen*
-|Aktivieren um die von dir angelegten Artikelkategorien als Filteroptionen für Suchergebnisse zu verwenden.
-
-|====
-
-[#110]
+[#lts-item-list]
 === Artikellisten einrichten (veraltet)
 
-[NOTE]
-====
-Artikellisten können vollständig über den ShopBuilder abgebildet werden. 
-====
-
-Mit Artikellisten lassen sich Artikel gruppieren und im plentyShop auf der Startseite und der Einzelansicht eines Artikels hervorheben. Folgende Artikellisten können in plentyShop LTS eingerichtet werden:
-
-* Shop-Aktionen: Listen mit Neuheiten, Sonderangeboten, etc. werden in plentyShop LTS mithilfe von Tags abgebildet. Wie du Tags anlegst, erfährst du auf der Handbuchseite zu xref:artikel:markierungen.adoc#400[Tags]. Wie du Artikel mit Tags verknüpfst, erfährst du im Handbuch unter xref:artikel:artikel-verwalten.adoc#150[Artikel mit Tags versehen].
-* Cross-Selling: Cross-Selling-Artikel werden über *Beziehungen* in plentyShop angezeigt. Weitere Informationen findest du im Handbuch unter xref:artikel:cross-selling.adoc[Cross-Selling einrichten].
-* Zuletzt gesehene Artikel: Eine Liste der von der Kund:in zuletzt gesehenen Artikel wird angezeigt.
-
-[#120.instruction]
-Artikellisten einrichten:
-
-. Öffne das Menü *Plugins » Plugin-Übersicht*. +
-→ Die Plugin-Übersicht wird geöffnet.
-. Klicke auf *plentyShop LTS*. +
-→ Das Plugin wird geöffnet.
-. Klicke im Verzeichnisbaum auf *Konfiguration*.
-. Wechsle in das Tab *Artikellisten*.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-artikelliste-einrichten>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[tabelle-artikelliste-einrichten]]
-.Artikellisten einrichten
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Zuletzt angesehen: Anzahl der zuletzt angesehenen Artikel* (veraltet)
-|Anzahl der zuletzt gesehenen Artikel wählen, die in Artikellisten vom Typ *Zuletzt angesehen* angezeigt werden. (Diese Einstellung ist veraltet und kann nun über den ShopBuilder vorgenommen werden.)
-
-| *Cross-Selling: Cross-Selling-Beziehung* (veraltet)
-|Beziehung für Cross-Selling-Artikel wählen. Artikel mit dieser Beziehung werden in einer Artikelliste vom Typ *Cross-selling* angezeigt. +
-
-*Ähnlich* = Gewählte Artikel sind dem geöffneten Artikel ähnlich. +
-*Zubehör* = Gewählte Artikel sind Zubehör des geöffneten Artikels. +
-*Ersatzteil* = Gewählte Artikel sind Ersatzteile des geöffneten Artikels. +
-*Paket* = Gewählte Artikel eignen sich dazu, mit dem geöffneten Artikel als Paket gekauft zu werden.
-
-| *Cross-Selling: Sortierung* (veraltet)
-|<<#191, Sortieroption>> wählen, die standardmäßig bei der Sortierung der Cross-Selling Artikelliste voreingestellt ist.
-
-| *Tags: Sortierung* (veraltet)
-|<<#191, Sortieroption>> wählen, die standardmäßig bei der Sortierung der Tag-Artikelliste voreingestellt ist.
-
-| *Erste/zweite/dritte Artikelliste* (veraltet)
-|Typ der Artikelliste wählen. Du bearbeitest die *Titel* deiner Artikellisten im Menü *CMS » Mehrsprachigkeit* im Bereich *Artikel*. +
-
-*Zuletzt angesehen* = Eine Liste zuletzt gesehener Artikel wird im plentyShop angezeigt. +
-*Cross-Selling der gewählten Beziehung* = Eine Liste von Cross-Selling-Artikeln mit der gewählten Beziehung wird im plentyShop angezeigt. +
-*Tags* = Eine Liste von Artikeln der verknüpften Tags wird im plentyShop angezeigt.
-
-| *Tag-ID-Liste für die erste/zweite/dritte Artikelliste* (veraltet)
-|IDs der Tags eingeben. Artikel, die mit diesen Tags verknüpft sind, werden in der der Artikelliste vom Typ *Tags* angezeigt. +
-*_Hinweis:_* Mehrere IDs kommasepariert eingeben.
-
-|====
-
-Wenn du nicht den *ShopBuilder* verwendest, verknüpfst du Artikellisten über *Template-Container* an der gewünschten Stelle in deinem plentyShop. Gehe wie im Folgenden beschrieben vor, um die *Artikelliste für zuletzt gesehene Artikel* in der Einzelansicht eines Artikels im plentyShop zu verknüpfen. Weitere Artikellisten verknüpfst du analog.
-
-[#130.instruction]
-Artikelliste verknüpfen:
-
-include::plugins:partial$plugin-container-verknuepfung.adoc[tag=menu-path]
-. Wähle aus der Dropdown-Liste die Option *First item list*. +
-→ Für die erste Artikelliste ist standardmäßig der Typ *Zuletzt angesehen* voreingestellt.
-. Wähle einen oder mehrere Container, in denen du die Artikelliste anzeigen möchtest, z.B. *Homepage: Container 7*, *Homepage: Container 9* oder *Single item: Container for item lists*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Die Artikelliste wird im gewählten Container im plentyShop angezeigt.
-
-Eine vollständige Auflistung und Erläuterung der verfügbaren Container findest du in unserer englischsprachigen link:https://developers.plentymarkets.com/dev-doc/template-containers[Entwicklerdokumentation^]. Die Entwickler:innendokumentation richtet sich primär an erfahrenere Nutzer:innen und ist für eine Basiseinrichtung von plentyShop LTS nicht notwendig.
+include::partial$lts-item-list.adoc[]
 
 [#140]
 === Warenkorb anpassen
