Added more meta descriptions

--- a/docs/en-gb/modules/markets/pages/best-practices-neckermann-cancellation-returns.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-neckermann-cancellation-returns.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: Neckermann.at, Neckermann,
 :id: 1JZWXQQ
+:description: This best practice teaches you how to create partial cancellations, cancellations, and returns for Neckermann.at.
 
 == Cancellation and returns
 
