--- a/docs/de-de/modules/maerkte/pages/best-practices-ebay-listing-freischalten.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-ebay-listing-freischalten.adoc
@@ -2,7 +2,7 @@
 :author: team-plenty-channel
 :keywords: eBay, eBay Listing, eBay Artikel einstellen, eBay Listing einstellen
 :id: 0ITKS35
-:description: In diesem Best Practice erfährst du, welche Einstellungen du vornehmen musst, damit ein Artikel zu eBay exportiert wird.
+:description: In diesem Praxisbeispiel erfährst du, welche Einstellungen du vornehmen musst, damit ein Artikel zu eBay exportiert wird.
 
 In diesem Best Practice bereiten wir einen Artikel für den Export zu eBay vor und zeigen dir, wie du vorgehen musst.
 
