--- a/docs/de-de/modules/maerkte/pages/best-practices-ebay-nicht-mehr-vorraetig-option.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-ebay-nicht-mehr-vorraetig-option.adoc
@@ -2,7 +2,7 @@
 :author: team-plenty-channel
 :keywords: eBay, ebay Nicht mehr vorrätig
 :id: CS9FTU3
-:description: In diesem Best Practice erfährst du, wie du die Nicht mehr vorrätig-Option auf eBay nutzen kannst.
+:description: In diesem Prexisbeispiel erfährst du, wie du die Nicht mehr vorrätig-Option auf eBay nutzen kannst.
 
 In diesem Best Practice erfährst du, welche Einstellungen getroffen werden müssen, damit die *Nicht mehr vorrätig-Option* auf eBay genutzt werden kann. +
 Die Option signalisiert, dass ein Artikel bzw. eine Variante aktuell keinen Bestand hat.
