--- a/docs/de-de/modules/maerkte/pages/best-practices-kaufland-integration-versandgruppen.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-kaufland-integration-versandgruppen.adoc
@@ -2,6 +2,7 @@
 :author: team-plenty-channel
 :keywords: real Versandgruppen, kaufland Versandgruppen, kaufland Versandeinstellungen, real Versandeinstellungen
 :id: S88P0KD
+:description: In diesem Praxisbeispiel erfährst du, wie du Kaufland-Versandgruppen mit deinen Versandprofilen in plentymarkets verknüpfst. Mit den Versandgruppen von Kaufland kannst du unterschiedliche Versandkosten für verschiedene Lieferländer festlegen.
 
 [#100]
 == Was ist der Nutzen der Versandgruppen?
