update meta descriptions in crm area

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1,8 +1,7 @@
 = EmailBuilder
-:keywords: EmailBuilder, E-Mail Builder, E-Mail-Vorlagen, Widgets, Emailvorlagen, Dokumentenanhang E-Mail, Email-Vorlagen Baukasten, E-Mail-Variablen, twig expressions, E-Mail-Versand, Code-Widget
-:description: Erfahre, wie du den EmailBuilder in plentymarkets verwendest.
+:keywords: EmailBuilder, E-Mail Builder, E-Mail-Vorlagen, Widgets, Emailvorlagen, Dokumentenanhang E-Mail, Email-Vorlagen Baukasten, E-Mail-Variablen, twig expressions, E-Mail-Versand, Code-Widget, Widgets E-Mail-Vorlagen
+:description: Erfahre, wie du den EmailBuilder in plentymarkets verwendest und E-Mail-Vorlagen im Baukastenprinzip mithilfe von Widgets und Variablen erstellst.
 :page-aliases: emailbuilder-testphase.adoc
-:id: MYFLVYO
 :author: team-crm
 
 Alle E-Mails, die du über plentymarkets an deine xref:crm:kontakte.adoc#[Kontakte] versendest, basieren auf Vorlagen. Vorlagen erstellst und verwaltest du mit dem EmailBuilder im Menü *CRM » EmailBuilder*. 
