--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -1,7 +1,7 @@
 = Kontakt suchen
 :keywords: Kontakt suchen, Kontaktsuche, Kunden suchen, Kunde suchen, Kontakt finden, Gast suchen
+:description: Erfahre, wie du nach Kontaktdatensätzen in plentymarkets suchst.
 :page-pagination:
-:id: LAWRQ5I
 :author: team-crm
 
 Um einen bestimmten Kontakt zu suchen, gibst du die dir bekannten Suchbegriffe in die Filter ein. Es ist auch möglich, mehrere Suchbegriffe gleichzeitig in die Suchfelder einzugeben. Dies ermöglicht eine schnellere und genauere Suche.
