--- a/docs/de-de/modules/auftraege/pages/gutscheine.adoc
+++ b/docs/de-de/modules/auftraege/pages/gutscheine.adoc
@@ -1,10 +1,9 @@
 = Gutscheine
 :keywords: Gutscheine, Gutschein, Kampagne, Gutschein-Code, Artikel als Gutschein verkaufen, Gutscheinartikel, Einrichtung von Gutscheinen, Gutschein einrichten, Gutscheineinrichtung
-:description: Erfahre auf dieser Handbuchseite, wie du Gutscheine und Gutscheinkampagnen in plentymarkets verwaltest.
-:id: V9GZLXD
+:description: Erfahre, wie du Gutscheine und Gutscheinkampagnen in plentymarkets verwaltest.
 :author: team-crm
 
-Gutscheine sind ein beliebtes Mittel zur Bindung von bestehenden Kund:innen, Gewinnung von Neukund:innen und  Absatzsteigerung. plentymarkets verfügt im Menü *Aufträge » Gutscheine* über ein umfangreiches Gutscheinmodul. In diesem Menü kannst du Kampagnen mit verschiedenen Rabattmöglichkeiten erstellen. Ein Gutschein ist ein bestimmter Code, der einer Kampagne angehört und entweder einmal oder mehrfach eingelöst werden kann. Die Einlösung erfolgt während des Bestellvorgangs. Dabei wird der entsprechende Rabattwert direkt angezeigt.
+Gutscheine sind ein beliebtes Mittel zur Bindung von bestehenden Kund:innen, Gewinnung von Neukund:innen und  Absatzsteigerung. plentymarkets verfügt im Menü *Aufträge » Gutscheine* über ein umfangreiches Gutscheinmodul. In diesem Menü kannst du Kampagnen mit verschiedenen Rabattmöglichkeiten erstellen. Ein Gutschein ist ein bestimmter Code, der einer Kampagne angehört und entweder einmal oder mehrfach eingelöst werden kann. Die Einlösung erfolgt während des Bestellvorgangs. Dabei wird der entsprechende Rabattwert direkt angezeigt.
 
 [#verwendungsmoeglichkeiten-gutscheine]
 == Verwendungsmöglichkeiten von Gutscheinen
