--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -1,6 +1,6 @@
 = Messenger (Testphase)
 :keywords:
-:description: Erfahre, wie du den Messenger in plentymarkets für den E-Mail-Versand und E-Mail-Empfang nutzt.
+:description: Erfahre, wie du den Messenger in plentymarkets sowohl für den E-Mail-Versand und E-Mail-Empfang als auch für die interne Kommunikation nutzt.
 :author: team-crm
 
 Im Menü *CRM » Messenger (Testphase)* verwaltest du sowohl die externe Kommunikation mit deinen Kund:innen in Form von E-Mails als auch die interne Kommunikation in Form von Nachrichten. Wenn du Nachrichten flüsterst, sind diese Nachrichten nur in deinem plentymarkets System sichtbar und können von deinen Kontakten _nicht_ eingesehen werden. 
