--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -1,7 +1,7 @@
 = Vorbereitende Einstellungen vornehmen
 :keywords: Adress-Layout, Adresslayout, Adresslayout Lieferschein, Kundenklasse, Kontaktklasse, Kundentyp, Typ, Kundenklasse erstellen, Typ erstellen, Eigenschaften für Kontakt erstellen, Kundeneigenschaften, Kunden Eigenschaften auf Dokumenten, Tags für Kontakte, Tags für Kunden, Kontakttags, Kunden-Tags, Rabattsystem, Rabatt auf Kundenklasse, Kundenklassenrabatt, Rabattstaffel auf Nettowarenwert, Rabatt auf Zahlungsart, Verkaufspreis als Rabatt, manueller Rabatt für Kunden, manueller Rabatt für Kontakte, Rabatt für Kunden gewähren
+:descriptions: Erfahre, welche vorbereitenden Einstellungen du vornehmen musst, um mit Kontaktdatensätzen in plentymarkets zu arbeiten.
 :page-pagination:
-:id: V71KF8L
 :author: team-crm
 
 Du musst einige vorbereitende Einstellungen vornehmen, damit du die Kontaktverwaltung im Menü *CRM » Kontakte* optimal nutzen kannst.
