Update meta descriptions payment

--- a/docs/de-de/modules/payment/pages/faq.adoc
+++ b/docs/de-de/modules/payment/pages/faq.adoc
@@ -1,6 +1,6 @@
 = FAQ
-:keywords:
-:id: MYD5MPX
+:keywords: Häufig gestellte Fragen
+:description: Hier findest du Antworten auf häufig gestellte Fragen.
 :author: team-fulfillment-payment
 
 In diesem Bereich werden allgemeine FAQ zu Payment Themen und Payment Plugins behandelt. Konkrete FAQ über einzelne Zahlungsarten sind auf den Seiten der entsprechenden Zahlungsart integriert:
