--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -1,7 +1,6 @@
 = Bankdaten verwalten
-:description: Payment in plentymarkets: Verwalte deine Bankdaten und die Bankdaten deiner Kund:innen. Richte EBICS und SEPA in deinem plentymarkets System ein.
-:id: 69AQ724
 :keywords: Bank, Bankdaten, EBICS, SEPA, SEPA-Lastschriftmandat, Lastschrift, Bankinformationen, Konto, Bankkonto, Kontoinhaber, Kontonummer, Konto-Nr., Konto-Nummer, BLZ, Bankleitzahl, Account, IBAN, Bankverbindung, BIC, Mandat, Einzugsermächtigung, Abbuchungsauftrag, Bankdaten, Zahlungsverkehrsdaten, EBICS-Konto, Vormerkposten, Geschäftskonto, Geschäftskonten, Auszugsbereitstellung, buchungstagsorientiert, Buchungstag, auszugsorientiert, Auszugsnummer, Auszusgserstellung, technischer Teilnehmer, Buchung, Buchungen, STA, VMK, EU Typ, EU TYP T, Typ T, Kontoeinstellungen, Tagesumsatz, Tagesumsätze, Geschäftsvorfall, Geschäftsvorfälle, Zahlungsabruf, manueller Zahlungsabruf, INI, INI-Brief, Initialisierung, HIA, CAMT, Abrufintervall, Transaktion, Kreditinstitut, Überweisung, Lastschrift, Firmenlastschrift, Zahlungsempfänger, Gläubiger-Identifikationssnummer, Mandatsreferenz
+:description: Verwalte deine Bankdaten und die Bankdaten deiner Kund:innen. Richte EBICS und SEPA in deinem plentymarkets System ein.
 :author: team-fulfillment-payment
 
 Auf dieser Handbuchseite erfährst du, wie du deine <<#eigene-bankdaten, Bankdaten>> und die <<#bankdaten-kunden, Bankdaten deiner Kund:innen>> in plentymarkets speicherst und wie du <<#ebics, EBICS>> und <<#220, SEPA>> einrichtest.
