--- a/docs/de-de/modules/payment/pages/checkliste-payment-plugins.adoc
+++ b/docs/de-de/modules/payment/pages/checkliste-payment-plugins.adoc
@@ -1,6 +1,6 @@
 = Probleme mit Payment Plugins
 :keywords: payment plugin, payment-plugin, Zahlungsplugin, Zahlungs-Plugin, Zahlungplugin, Zahlung-Plugin
-:id: PKZQP3Y
+:description: Wie du Probleme mit den Payment-Plugins lösen kannst.
 :author: team-fulfillment-payment
 
 Zahlungsarten wie zum Beispiel xref:payment:paypal.adoc#[PayPal], xref:payment:mollie.adoc#[Mollie] oder xref:payment:klarna.adoc#[Klarna] werden über Plugins in dein System eingebunden. Durch das Durchlaufen des dazugehörigen Assistenten werden die Zahlungsarten eingerichtet und sind dann in deinem System verfügbar. +
