ADD: meta descriptions for plentyShop LTS pages pt1
Also removed obsolete IDs

--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -1,11 +1,10 @@
 = plentyShop LTS einrichten
 :author: team-webshop
 :keywords: Webshop, Ceres, plentyShop LTS, IO, Plugin, plentyShop, EHI, Trusted Shops, Mehrsprachigkeit, Template, ShopBuilder
-:description: Lerne, wie du plentyShop LTS einrichtest.
+:description: Lerne, wie du das Plugin plentyShop LTS einrichtest.
 :icons: font
 :docinfodir: /workspace/manual-adoc
 :docinfo1:
-:id: GW5QHSI
 
 link:https://marketplace.plentymarkets.com/plugins/templates/Ceres_4697[plentyShop LTS^] ist das offizielle Template-Plugin für plentyShop. Im plentyShop sind Design und Logik voneinander getrennt. Der plentyShop wird über zwei Plugins in deinem plentymarkets System eingebunden.
 
