--- a/docs/de-de/modules/webshop/pages/shop-builder.adoc
+++ b/docs/de-de/modules/webshop/pages/shop-builder.adoc
@@ -2,9 +2,9 @@
 :author: team-webshop
 :keywords: Webshop, Ceres, IO, Drag and Drop, Baukasten, ShopBuilder, Widget, Checkout,
 :icons: font
+:description: Lerne, wie du plentyShop-Seiten über den ShopBuilder erstellst und einrichtest.
 :docinfodir: /workspace/manual-adoc
 :docinfo1:
-:id: UC8C8W9
 
 [#shopbuilder-intro]
 Der ShopBuilder ist plentymarkets Baukastenmodul mit dem du deinen link:https://marketplace.plentymarkets.com/plugins/templates/Ceres_4697[plentyShop LTS^] schnell und einfach per Drag-and-drop erstellen und bearbeiten kannst. Dafür brauchst du keinerlei Programmierungskenntnisse. +
