Added meta descriptions and deleted IDs

--- a/docs/en-gb/modules/markets/pages/amazon-pay.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-pay.adoc
@@ -1,7 +1,6 @@
 = Amazon: Setting up Amazon Pay
 :keywords: Amazon Pay, Setting up Amazon Pay, Amazon Pay setup, Set up Amazon Pay, Paying with Amazon, Payment with Amazon, Pay with Amazon
-:description: Multi-Channel in plentymarkets: Allow customers to pay with Amazon in your plentyShop.
-:id: 5MHIPVQ
+:description: Information about Amazon Pay - allow customers to pay with Amazon in your plentyShop.
 :author: team-plenty-channel
 
 *Pay with Amazon* is a comprehensive payment solution for online sellers. Offer *Pay with Amazon* and enable millions of Amazon customers to shop securely on your website without re-entering their delivery and payment information. Customers can complete purchases quickly without leaving your website.
