--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -1,8 +1,7 @@
 = Setting up Amazon
 :keywords: Amazon, Amazon setup, setting up Amazon, FBA, Amazon FBA, Fulfillment by Amazon, MFN, Amazon MFN, Merchant Fulfillment Network, Prime, SameDay, NextDay, SecondDay, Market, Marketplace, Multi-Channel, Multichannel, Multi-Channel Amazon, Amazon Multi-Channel, Amazon Business, Amazon B2B, Amazon VCS, VCS, VCS Lite, IDU, Invoice Document Uploader, Amazon invoice, VAT calculation service, Amazon Pay, Amazon product type, flat file, flatfile, ASIN, ASIN matching, Amazon platform, amazon.de, authorisation, authentication, credit note import, VCS plentymarkets, VCS Amazon
-:description: Multi-Channel in plentymarkets: Set up the interface to the market Amazon in your plentymarkets system.
+:description: Learn how to set up Amazon in plentymarkets to start selling your items on the market.
 :page-pagination:
-:id: GL6NEIV
 :author: team-plenty-channel
 
 link:https://www.amazon.co.uk/[Amazon^] has gone from being the largest internet book store to one of the leading universal shopping centres. Many customers appreciate the large portfolio, rely on the high product quality and expect best service such as fast delivery. With plentymarkets, you have full access to Amazon. Learn how to make items available, activate the interface for data exchange, use the FBA service by Amazon and many more. The abbreviation FBA stands for Fulfilment by Amazon, a service from Amazon where Amazon takes care of the entire stock management and logistics.
