--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -1,8 +1,7 @@
 = Amazon einrichten
 :keywords: Amazon, Amazon einrichten, FBA, Amazon FBA, Fulfillment by Amazon, MFN, Amazon MFN, Merchant Fulfillment Network, Prime, SameDay, NextDay, SecondDay, Marktplatz, Multi-Channel, Multichannel, Amazon Multi-Channel, Multi-Channel Amazon, Amazon Business, Amazon B2B, Amazon VCS, VCS, VCS Lite, IDU, Invoice Document Uploader, Amazon Rechnung, Umsatzsteuerservice, Amazon Pay, Amazon Produkttyp, Flat File, Flatfile, Lagerbestandsdatei, ASIN, ASIN-Verknüpfung, Amazon-Plattform, amazon.de, Autorisierung, Gutschriftenimport, VCS plentymarkets, VCS Amazon
-:description: Multi-Channel in plentymarkets: Richte die Schnittstelle zum Marktplatz Amazon in deinem plentymarkets System ein.
+:description: Auf dieser Seite erfährst du, wie du Amazon in plentymarkets einrichtest, um deine Artikel auf Amazon zu verkaufen.
 :page-pagination:
-:id: GL6NEIV
 :author: team-plenty-channel
 
 link:https://www.amazon.de/[Amazon^] hat sich von der größten Online-Buchhandlung zum führenden Universalkaufhaus entwickelt. Unzählige Kund:innen schätzen die große Auswahl, vertrauen auf eine hohe Warenqualität und erwarten besten Service wie zum Beispiel eine sehr zeitnahe Warenlieferung. plentymarkets ermöglicht dir die komplette und integrierte Anbindung an Amazon. Erfahre, wie du Artikel verfügbar machst, den Datenaustausch über die Schnittstelle aktivierst, den FBA-Service von Amazon nutzt und vieles mehr. FBA ist das Kürzel für Fulfillment by Amazon, einem Service von Amazon, bei dem Amazon die Lagerhaltung sowie die gesamte Logistik übernimmt.
