--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -1,7 +1,6 @@
 = Amazon: FBA-Service nutzen
 :keywords: Amazon FBA, FBA, Amazon Multi-Channel, Amazon FBA Multi-Channel, Versand durch Amazon, Amazon versendet, Fulfillment by Amazon, Fulfilment by Amazon, Amazon Fulfilment, Amazon Fulfillment
-:description: Multi-Channel in plentymarkets: Amazon versendet deine Ware mit Amazon FBA.
-:id: VKWEAOP
+:description: Auf dieser Seite, wie du den FBA-Service von Amazon in plentymarkets einrichtest. FBA bedeutet, dass Amazon deine Artikel lagert und versendet.
 :author: team-plenty-channel
 
 Das Kürzel FBA steht für Fulfillment by Amazon. Statt die Aufträge selbst zu bearbeiten, die Ware zu verpacken und zu versenden, überlässt du beim FBA-Programm Amazon diese Aufgabe. Natürlich musst du zumindest einen Teil deiner Waren dann auch bei Amazon einlagern.
