--- a/docs/en-gb/modules/markets/pages/amazon-fba.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fba.adoc
@@ -1,7 +1,6 @@
 = Amazon: Using the FBA service
 :keywords: Amazon FBA, FBA, Amazon Multi-Channel, Amazon FBA Multi-Channel, shipping by Amazon, Amazon ships, Fulfillment by Amazon, Fulfilment by Amazon, Amazon Fulfilment, Amazon Fulfillment
-:description: Multi-Channel in plentymarkets: Amazon ships your items with Amazon FBA.
-:id: VKWEAOP
+:description: Learn how to set up Amazon FBA in plentymarkets. FBA means that Amazon stores and ships your items.
 :author: team-plenty-channel
 
 The abbreviation FBA stands for Fulfilment by Amazon. Instead of dealing with the orders yourself, packaging the items and sending them, you let Amazon take care of this task for you with the FBA programme. Of course, you then have to store at least some of your items with Amazon.
