FIX: two broken includes

--- a/docs/de-de/modules/webshop/pages/shop-builder.adoc
+++ b/docs/de-de/modules/webshop/pages/shop-builder.adoc
@@ -8,7 +8,7 @@
 
 [#shopbuilder-intro]
 
-include::partial$sb-intro.adoc
+include::partial$sb-intro.adoc[]
 
 // LEVEL?
 [discrete]
@@ -69,7 +69,7 @@ Kategorie löschen:
 [#kategorie-verknuepfen]
 ==== Kategorien mit dem plentyShop LTS-Plugin verknüpfen
 
-include::partials$sb-link-category.adoc[]
+include::partial$sb-link-category.adoc[]
 
 [#inhaltsverwaltung]
 === Inhalte verwalten
