CHANGE meta descriptions as needed in item chapter, REMOVE page ids in item chapter

--- a/docs/de-de/modules/artikel/pages/checkliste-artikel-anzeige.adoc
+++ b/docs/de-de/modules/artikel/pages/checkliste-artikel-anzeige.adoc
@@ -1,7 +1,6 @@
 = Artikel ist nicht sichtbar
 :keywords: Sichtbarkeit, Artikelsichtbarkeit, Artikel-Sichtbarkeit, Verfügbarkeit, Artikelverfügbarkeit, Artikel-Verfügbarkeit, Checkliste, Check-Liste, Artikel nicht sichtbar, Artikel ist nicht sichtbar, Artikel sind nicht sichtbar, Artikel unsichtbar, Unsichtbarer Artikel, Unsichtbare Artikel
-:description: Warum wird ein Artikel im Webshop nicht angezeigt? Diese Checkliste hilft dir, mögliche Fehlerquellen bei der Artikelsichtbarkeit ausfindig zu machen.
-:id: X4LB3DQ
+:description: Warum wird ein Artikel im plentyShop nicht angezeigt? Diese Checkliste hilft dir, mögliche Fehlerquellen bei der Artikelsichtbarkeit ausfindig zu machen.
 :author: team-item
 
 ////
